--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Hello</title>
-    
-    <h1> NNNNNNNNNNNNNN </h1>
-    <style>
-      p {
-          color: blue;
-      }
-    </style>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="fi">
 
-    <p>abcdefghijklmnopqrstuvwxyzåäö</p>
-    
+<head>
+<link rel="stylesheet" type="text/css" href="neatyyli.css">
+<meta charset="UTF-8">
+<title>Välkommen</title>
+</head>
+<body>
+  <h1>Iso otsikko</h1>
+  <p>Tähän tulee tekstiä</p>
+  
+  <div></div>
+    <ol type="A">
+      <li>Ensimmäinen tuote</li>
+      <li>Toinen tuote</li>
+    </ol>
 
-  </body>
+    <ul style="list-style-type:square">
+      <li>Första produkt</li>
+      <li>Andra produkt</li>
+    </ul>
+</body>
+
 </html>
-
 
 
 
