--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Välkommen</title>
 </head>
 <body>
+  <a href="e.g.second.html">Toinen sivu</a>
   <h1>Iso otsikko</h1>
   <p>Tähän tulee tekstiä</p>
   
