--- a/e.g.second.html
+++ b/e.g.second.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="fi" 
+<html lang="fi">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="koira.css">
 <title>Hello</title>
 </head>
 <body>
 <a href="index.html">Toinen sivu</a>
- <h1>Hi there</h1>   
- <p>Welcome to my page</p>
+ <h1 class="border">Hi there</h1>   
+ <p class="esimerkki">Welcome to my page</p>
 
  <img src="Cockerspanieli-7.jpg" width="600px" height="400px">
+ <figure>
+     <img src="Cockerspanieli-7.jpg" width="600px" height="400px">
+     <figcaption>Koira</figcaption>
+ </figure>
+ <h2 class="border esimerkki">html taitoni</h2>
+ <progress value="30" max="100"></progress>
 </body>
