--- a/e.g.second.html
+++ b/e.g.second.html
@@ -6,15 +6,15 @@
 <title>Hello</title>
 </head>
 <body>
-<a href="index.html">Toinen sivu</a>
+<a href=index.html>Toinen sivu</a>
  <h1 class="border">Hi there</h1>   
  <p class="esimerkki">Welcome to my page</p>
 
  <img src="Cockerspanieli-7.jpg" width="600px" height="400px">
  <figure>
-     <img src="Cockerspanieli-7.jpg" width="600px" height="400px">
+     <img src="Cockerspanieli-3.jpg" width="600px" height="400px">
      <figcaption>Koira</figcaption>
  </figure>
- <h2 class="border esimerkki">html taitoni</h2>
- <progress value="30" max="100"></progress>
+ <h2>html taitoni</h2>
+ <progress value="50" max="100"></progress>
 </body>
