--- a/e.g.second.html
+++ b/e.g.second.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="koira.css">
+    <meta charset="utf-8">
 <title>Hello</title>
 </head>
 <body>
@@ -10,11 +11,12 @@
  <h1 class="border">Hi there</h1>   
  <p class="esimerkki">Welcome to my page</p>
 
- <img src="Cockerspanieli-7.jpg" width="600px" height="400px">
+ <img src="Cockerspanieli-7.jpg" alt="koira" width="600" height="400">
  <figure>
-     <img src="Cockerspanieli-3.jpg" width="600px" height="400px">
+     <img src="Cockerspanieli-3.jpg" alt="koira" width="600" height="400">
      <figcaption>Koira</figcaption>
  </figure>
  <h2>html taitoni</h2>
  <progress value="50" max="100"></progress>
 </body>
+</html>
