--- a/second.html
+++ b/second.html
@@ -14,40 +14,34 @@
 </div>
 <div id="nav">
   <nav>
-  <a href="index.html">Eka sivu</a>
-  <a href="second.html">Toka sivu</a>
+  <a href="index.html">Toinen sivu</a>
   </nav>
 </div>
 <div id="section">
-  <section>
-  <h3>Tässä on tekstiä</h3>
+<section>
+<h3>Hyvää päivää</h3>
 </section>
 <aside>
   <ul style="list-style-type: circle;">
-  <li>Koira</li>
-  <li>Kissa</li>
-  <li>Kani</li>
+  <li>A</li>
+  <li>B</li>
+  <li>C</li>
   </ul>
 
   <ul style="list-style-type: square;">
-  <li>Peruna</li>
-  <li>Porkkana</li>
-  <li>Bataatti</li>
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
   </ul>
 </aside>
 <article>
-  <h2>Otsikko</h2>
-  <p>Tässä on tekstiä</p>
-  </article>
+    <h2>Otsikko2</h2>
+    <p>Tässä on tekstiä</p>
+ </article>
 </div>
 <footer>
-  <p>Mitä kuuluu</p>
-  </footer>
+    <p>abcdefghijklmnopqrstuvwxyzåäö</p>
+    </footer>
 </body>
 
 </html>
-
-
-
-
-
