--- a/second.html
+++ b/second.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="neatyyli.css">
 <meta charset="UTF-8">
-<title>Välkommen</title>
+<title>Tervetuloa</title>
 </head>
 <body>
 <div id="header">
