--- a/1/index.html
+++ b/1/index.html
@@ -6,28 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="eka.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
-    <h1>Hello, world!</h1>
+
+<nav class="navbar">
+   <a href="#" class="nav-link active">Home</a>
+   <a href="#" class="nav-link">About</a>
+   <a href="#" class="nav-link">Service</a>
+   <a href="#" class="nav-link">Contact</a>
+   <div class="col-sm-8"></div>
+   </nav>
+
+   <h1>Hello</h1>
+
+   <div class="container" id="container2">
+   <div class="row">
+   <div class="col-sm-4"><button type="submit" class="btn-default">Haloo</button></div>
+    <div class="col-sm-4"><button type="submit" class="btn">Moi</button></div>
+    <div class="col-sm-4"><button type="submit" class="btn-success">Hello</button></div>
+   </div>
+</div>
+   <div class="container">
     <div class="row">
-        <div class="col-sm-4">My first column</div>
-        <div class="col-sm-4">My second column</div>
-        <div class="col-sm-4">My third column</div>
+       <div class="col-sm-4"><img src="Cockerspanieli-7.jpg" class="img-circle" alt="Responsive image"></div>
+        <div class="col-sm-4"><img src="Cockerspanieli-7.jpg" class="img-circle" alt="Responsive image"></div>
+        <div class="col-sm-4"><img src="Cockerspanieli-7.jpg" class="img-circle" alt="Responsive image"></div>
         </div>
-    <div class="row">
-        <div class="col-sm-6">Ensimmäinen</div>
-        <div class="col-sm-6">Toinen</div>
-    </div>    
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+
+</body>
 </html>
