--- a/1/index.html
+++ b/1/index.html
@@ -13,9 +13,9 @@
   <body>
 
 <nav class="navbar">
+  <a class="navbar-brand">9B</a>
    <a href="#" class="nav-link active">Home</a>
    <a href="#" class="nav-link">About</a>
-   <a href="#" class="nav-link">Service</a>
    <a href="#" class="nav-link">Contact</a>
    <div class="col-sm-8"></div>
    </nav>
