--- a/verkkosivut/index.html
+++ b/verkkosivut/index.html
@@ -6,6 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="verkkosivut.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" />
     <title>Abby's homepage</title>
   </head>
   <body>
@@ -17,16 +18,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto text-center">
         <li class="nav-item active">
-          <a class="nav-link" id="currentlink" href="index.html">Home</a>
+          <a class="nav-link hvr-bounce-in" id="currentlink" href="index.html">Home</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="verkkosivut2.html">About</a>
+          <a class="nav-link hvr-bounce-in" href="verkkosivut2.html">About</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="koirakaverit.html">Gallery</a>
+          <a class="nav-link hvr-bounce-in" href="koirakaverit.html">Gallery</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="verkkosivut3.html">Contact</a>
+          <a class="nav-link hvr-bounce-in" href="verkkosivut3.html">Contact</a>
           </li>
       </ul>
     </div>
@@ -38,7 +39,7 @@
         <img src="IMG_7860-2.jpg" class="d-block w-100" alt="koira">
         </div>
       <div class="carousel-item">
-        <img src="IMG_9145-2.JPG" class="d-block w-100" alt="koira">
+        <img src="IMG_9145-2.jfif" class="d-block w-100" alt="koira">
         </div>
       <div class="carousel-item">
         <img src="Cockerspanieli-7-2.jpg" class="d-block w-100" alt="koira">
