--- a/verkkosivut/koirakaverit.html
+++ b/verkkosivut/koirakaverit.html
@@ -6,6 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="koirakaverit.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" />
     <title>Gallery</title>
   </head>
   <body>
@@ -17,16 +18,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto text-center">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link hvr-bounce-in" href="index.html">Home</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="verkkosivut2.html">About</a>
+          <a class="nav-link hvr-bounce-in" href="verkkosivut2.html">About</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" id="currentlink" href="koirakaverit.html">Gallery</a>
+          <a class="nav-link hvr-bounce-in" id="currentlink" href="koirakaverit.html">Gallery</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="verkkosivut3.html">Contact</a>
+          <a class="nav-link hvr-bounce-in" href="verkkosivut3.html">Contact</a>
         </li>
       </ul>
       </div>
@@ -37,7 +38,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="IMG_0406.JPG" alt="Koira">
+              <img class="card-img-top" src="IMG_0406.jfif" alt="Koira">
               <div class="card-body">
                 <p class="card-text">2 months old</p>
               </div>
@@ -45,7 +46,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="IMG_9156.JPG" alt="Koira">
+              <img class="card-img-top" src="IMG_9156.jfif" alt="Koira">
               <div class="card-body">
                 <p class="card-text">3 months old</p>
               </div>
@@ -53,7 +54,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="IMG_1724.JPG" alt="Koira">
+              <img class="card-img-top" src="IMG_1724.jfif" alt="Koira">
               <div class="card-body">
                 <p class="card-text">6 months old</p>
               </div>
@@ -63,7 +64,7 @@
       <div class="row">
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="IMG_1235.JPG" alt="Koira">
+          <img class="card-img-top" src="IMG_1235.jfif" alt="Koira">
           <div class="card-body">
             <p class="card-text">8 months old</p>
           </div>
@@ -71,7 +72,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="IMG_1325.JPG" alt="Koira">
+          <img class="card-img-top" src="IMG_1325.jfif" alt="Koira">
           <div class="card-body">
             <p class="card-text">10 months old</p>
           </div>
@@ -79,7 +80,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="IMG_3129.JPG" alt="Koira">
+          <img class="card-img-top" src="IMG_3129.jfif" alt="Koira">
           <div class="card-body">
             <p class="card-text">1 year old</p>
           </div>
