--- a/verkkosivut/verkkosivut2.html
+++ b/verkkosivut/verkkosivut2.html
@@ -6,6 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="verkkosivut2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" />
     <title>About</title>
   </head>
   <body>
@@ -17,31 +18,31 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
           <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link hvr-bounce-in" href="index.html">Home</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link" id="currentlink" href="verkkosivut2.html">About</a>
+            <a class="nav-link hvr-bounce-in" id="currentlink" href="verkkosivut2.html">About</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link" href="koirakaverit.html">Gallery</a>
+            <a class="nav-link hvr-bounce-in" href="koirakaverit.html">Gallery</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link" href="verkkosivut3.html">Contact</a>
+            <a class="nav-link hvr-bounce-in" href="verkkosivut3.html">Contact</a>
             </li>
         </ul>
       </div>
     </div>
     </nav>
         <div class="row">
-          <div class="col-sm-6" id="koira"><img src="IMG_1245.PNG" alt="koira" width="300" height="200"></div>
+          <div class="col-sm-6 hvr-grow" id="koira"><img src="IMG_1245.PNG" alt="koira" width="300" height="200"></div>
           <div class="col-sm-6"><br><br><br><h2>Benchmark Guess You Wanna Know "Abby"</h2></div>
         </div>
     <div class="row">
-        <div class="col-sm-6" id="koira2"><img src="IMG_9900.jpg" alt="koira" width="300" height="200"></div>
+        <div class="col-sm-6 hvr-grow" id="koira2"><img src="IMG_9900.jpg" alt="koira" width="300" height="200"></div>
         <div class="col-sm-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
         </div>
     <div class="row">
-            <div class="col-sm-6" id="koira3"><img src="Cockerspanieli-3.jpg" alt="koira" width="300" height="200"></div>
+            <div class="col-sm-6 hvr-grow" id="koira3"><img src="Cockerspanieli-3.jpg" alt="koira" width="300" height="200"></div>
             <div class="col-sm-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
