--- a/verkkosivut/verkkosivut3.html
+++ b/verkkosivut/verkkosivut3.html
@@ -6,6 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="verkkosivut3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" />
     <title>Contact</title>
   </head>
   <body>
@@ -17,16 +18,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto text-center">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link hvr-bounce-in" href="index.html">Home</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="verkkosivut2.html">About</a>
+          <a class="nav-link hvr-bounce-in" href="verkkosivut2.html">About</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="koirakaverit.html">Gallery</a>
+          <a class="nav-link hvr-bounce-in" href="koirakaverit.html">Gallery</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" id="currentlink" href="verkkosivut3.html">Contact</a>
+          <a class="nav-link hvr-bounce-in" id="currentlink" href="verkkosivut3.html">Contact</a>
         </li>
       </ul>
       </div>
