--- a/verkkosivut2.html
+++ b/verkkosivut2.html
@@ -34,7 +34,7 @@
     </div>
     </nav>
         <div class="row">
-          <div class="col-sm-6 hvr-grow" id="koira"><img src="IMG_1245.PNG" alt="koira" width="300" height="200"></div>
+          <div class="col-sm-6 hvr-grow" id="koira"><img src="IMG_1245.png" alt="koira" width="300" height="200"></div>
           <div class="col-sm-6"><br><br><br><h2>Benchmark Guess You Wanna Know "Abby"</h2></div>
         </div>
     <div class="row">
