--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Abby's homepage</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
     </div>
   </nav><br>
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
+    <div class="carousel-inner" style="margin-top: 40px;">
       <div class="carousel-item active">
         <img src="IMG_7860-2.jpg" class="d-block w-100" alt="koira">
         </div>
