--- a/verkkosivut2.html
+++ b/verkkosivut2.html
@@ -10,7 +10,7 @@
     <title>About</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,8 @@
     </div>
     </nav>
         <div class="row">
-          <div class="col-sm-6 hvr-grow" id="koira"><img src="IMG_1245.jpg" alt="koira" width="300" height="200"></div>
-          <div class="col-sm-6"><br><br><br><h2>Benchmark Guess You Wanna Know "Abby"</h2></div>
+          <div class="col-sm-6 hvr-grow" id="koira" style="margin-top: 55px;"><img src="IMG_1245.jpg" alt="koira" width="300" height="200"></div>
+          <div class="col-sm-6"><br><br><br><br><h2>Benchmark Guess You Wanna Know "Abby"</h2></div>
         </div>
     <div class="row">
         <div class="col-sm-6 hvr-grow" id="koira2"><img src="IMG_9900.jpg" alt="koira" width="300" height="200"></div>
