--- a/koirakaverit.html
+++ b/koirakaverit.html
@@ -10,7 +10,7 @@
     <title>Gallery</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
       </div>
       </div>
     </nav>
-    <div class="album py-5">
+    <div class="album py-5" style="margin-top: 25px;">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
