--- a/verkkosivut3.html
+++ b/verkkosivut3.html
@@ -10,7 +10,7 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
       </div>
     </div>
     </nav>
-    <div class="row">
+    <div class="row" style="margin-top: 55px;">
       <div class="col-sm-2"></div>    
       <div class="col-sm-8"><img src="IMG_94412.jpg" alt="kuvan otsikko" id="koira"></div>
       <div class="col-sm-2"></div>
