--- a/verkkosivut2.html
+++ b/verkkosivut2.html
@@ -39,11 +39,11 @@
         </div>
     <div class="row">
         <div class="col-sm-6 hvr-grow" id="koira2"><img src="IMG_9900.jpg" alt="koira" width="300" height="200"></div>
-        <div class="col-sm-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+        <div class="col-sm-6"><p>Abby was born July 22, 2016 so she's 4 years old at the moment. She's orange roan colored english cockerspaniel. Abby's very happy tailwaver and she likes (almost) everyone. Abby is kind, little shy, anxious and she's very longing for intimacy and hugging. Abby loves sitting on my lap everyday and she spends a lot of her time near me and watching over me. </p></div>
         </div>
     <div class="row">
             <div class="col-sm-6 hvr-grow" id="koira3"><img src="Cockerspanieli-3.jpg" alt="koira" width="300" height="200"></div>
-            <div class="col-sm-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+            <div class="col-sm-6"><p>Abby loves food, treats, toys and going for walks. We go to rally-toko classes every week and she's pretty good at it. Abby loves to do stuff with me so that's nice hobby for both of us. We also go for long walks everyday specially when the weather is good and warm. Abby likes playing with sticks and sand. Abby also loves swimming in the summer and would spend her hole day in the water.</p></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
