--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
     </div>
     </div>
   </nav><br>
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner" style="margin-top: 40px;">
-      <div class="carousel-item active">
-        <img src="IMG_7860-2.jpg" class="d-block w-100" alt="koira">
-        </div>
-      <div class="carousel-item">
-        <img src="IMG_9145-2.jfif" class="d-block w-100" alt="koira">
-        </div>
-      <div class="carousel-item">
-        <img src="Cockerspanieli-7-2.jpg" class="d-block w-100" alt="koira">
-        </div>
-    </div><br>
-    <h1>Welcome to Abby's page</h1>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-          </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-          </button>
-          </div>
+    <h1 style="margin-top: 50px;">Welcome to Abby's page</h1>
     <div class="row" id="tekstiä">
-    <div class="col-sm-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-    <div class="col-sm-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+    <div class="col-sm-6"><p>Cockerspaniels are medium sized dogs (about 13-15kg) and you can definitely recognize them from big ears and waving tails. There are many different colors, but popular ones are black, red, blue roan, orange roan and liver. Cockerspaniels are brave, smart and vigilant. They are kind, loyal, playful and loving dogs.</p></div>
+    <div class="col-sm-6"><p>Cockerspaniels are awesome family dogs and they usually love kids if they have change to get to know them. They are also used in hunting specially bird hunting and that's why they are called "bird dogs". These days cockerspaniels are pretty popular dogs and I'm sure that you can find one from your city.</p></div>
     </div>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner" style="margin-top: 40px;">
+        <div class="carousel-item active">
+          <img src="IMG_7860-2.jpg" class="d-block w-100" alt="koira">
+          </div>
+        <div class="carousel-item">
+          <img src="IMG_9145-2.jfif" class="d-block w-100" alt="koira">
+          </div>
+        <div class="carousel-item">
+          <img src="Cockerspanieli-7-2.jpg" class="d-block w-100" alt="koira">
+          </div>
+      </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+            </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
